# dragonito

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dragonito.h  dragonito_constants.h  dragonito_impl.h  dragonito_template.h  rem_gen.py  table_gen.py  test_gen.py
tests/: benchmarks.cpp  example.c  tests.cpp
